# breez-sdk-docs

./: .gitignore  README.md  book.toml  styles.css  tabs.js
.github/workflows/: main.yml
book/: 404.html  index.html  searchindex.js  searchindex.json  tabs.js  task-lists.css  toc.html  toc.js
book/css/: general.css
book/fonts/: fonts.css
book/guide/: about_breez_sdk_greenlight.html  android_notification_foreground_service.html  android_troubleshooting.html  buy_btc.html  closed_channels.html  communicating_fees.html  connecting.html  connecting_lsp.html  failure_report.html  fiat_currencies.html  getting_started.html  install.html  ios_notification_service_extension.html  list_payments.html  lnurl.html  lnurl_auth.html  lnurl_pay.html  lnurl_pay_service.html  lnurl_withdraw.html  lnurlpay.html  logging.html  messages.html  node_state.html  pay_onchain.html  payment_metadata.html  payment_notification.html  payments.html  production.html  receive_onchain.html  receive_payment.html  send_onchain.html  (+4 more)
snippets-processor/: Cargo.toml
snippets/python_snippets/: README.md  buy_btc.py  connecting_lsp.py  fiat_currencies.py  getting_started.py  lnurl_auth.py  lnurl_pay.py  lnurl_withdraw.py  main.py  pyproject.toml  receive_onchain.py  receive_payment.py  send_onchain.py  send_spontaneous_payment.py  static_channel_backup.py
snippets/python_snippets/src/: connecting_lsp.py  fiat_currencies.py  list_payments.py  lnurl_auth.py  receive_onchain.py  receive_payment.py  send_onchain.py  static_channel_backup.py
src/: README.md  SUMMARY.md
theme/: highlight.js
(+289 files in other folders)
